fixed dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -67,13 +67,13 @@ html {
   --darkText: #f0f0f0;
   --darkTransition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
-
-@media (prefers-color-scheme: dark) {
+/* //no need when using JS check// */
+/* @media (prefers-color-scheme: dark) {
   :root {
     --textColor: var(--darkText);
     --backgroundColor: var(--darkBackground);
   }
-}
+} */
 
 .dark-theme {
   --textColor: var(--darkText);
